# Page-Rank

./: .gitignore  articles_ranking.py  draw.py  habr_article.py  habr_consts_parser.py  habr_parser.py  helpers.py  links_parsing.py  main.py  pyproject.toml  ranking.py  readme.md  summarization.py
drawing/: __init__.py  drawing.py
dto/: __init__.py  habr_article.py  pair.py
general_parsing/: __init__.py  general_parsing.py  parse_links.py
habr_parsing/: __init__.py  article_parsing.py  consts.py  habr_parser.py  habr_utils.py  hrefs_extraction.py  links_parsing.py  recursive_parse.py  recursive_parsing.py
ranking/: __init__.py  pair.py  ranked_object.py  ranking.py
report/: report.tex  title_page.tex
report/src/: report.tex  title_page.tex
summarization/: __init__.py  summarization.py
texts/: T7L.txt
