[tool.poetry]
name = "tfip"
version = "0.1.0"
description = ""
authors = ["Kirill Kondrenko <kondrenkokp@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
