[tool.poetry]
name = "tfip"
version = "0.1.0"
description = ""
authors = ["Kirill Kondrenko <kondrenkokp@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
