[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
networkx = "^3.2.1"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
mpld3 = "^0.5.10"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
